Coverage from PR comments.